--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,5 @@
 <% content_for(:title, "Welcome | Association of Olgas") %>
-</h1> Posts List <h1>
+<h1> Posts List </h1>
 
 <%= link_to "New Post", new_post_path, id: "new_link", remote: true %>
 
